2014-01-13  Jean Delvare  <jdelvare@suse.de>

	* dmidecode.c: Decode ID of PCI Express 3 slots (DMI type 9).
	  This fixes Savannah bug #40178:
	  https://savannah.nongnu.org/bugs/?40178

2014-01-13  Jean Delvare  <jdelvare@suse.de>

	* LICENSE: Update to the latest upstream version. Amongst other
	  things, this fixes the FSF address.

2013-04-24  Jean Delvare  <jdelvare@suse.de>

	* dmidecode.c: Strip trailing zeroes from memory voltage values
	  (DMI type 17).
	* dmidecode.c: Fix support for new processor upgrade types (DMI
	  type 4) and new memory device type (DMI type 17.)

2013-04-17  Anton Arapov  <anton@redhat.com>

	Update to support SMBIOS specification version 2.8.0.

	* dmidecode.c: Correct processor family name (DMI type 4).
	* dmidecode.c: Correct typo in processor upgrade type (DMI type 4).
	* dmidecode.c: Add 9 new processor families (DMI type 4).
	* dmidecode.c: Add 2 new Intel socket types (DMI type 4).
	* dmidecode.c: Add Min/Max/Configured memory voltages (DMI type 17).
	* dmidecode.c: Add LRDIMM to memory device list (DMI type 17).

2012-03-26  Anton Arapov  <anton@redhat.com>

	* man/dmidecode.8: Add missing DMI type introduced with SMBIOS 2.7+, and
	  include the information about the extra output when dmidecode is run
	  on a hardware that has non-supported SMBIOS version.

2012-03-12  Anton Arapov  <anton@redhat.com>

	* dmioem.c: Add "PXE" to the HP OEM Type 209 output so it is similar to
	  the "iSCSI" description in HP OEM Type 221. Patch from Naga Chumbalkar.

2011-11-18  Jean Delvare  <jdelvare@suse.de>

	* dmidecode.c: Properly print the hexadecimal value of invalid
	  string characters.

2011-11-14  Anton Arapov  <anton@redhat.com>

	* dmidecode.c: Make dmi_chassis_type aware of the lock bit.
	  Patch from Stefan Tauner.
	* config.h: Haiku dropped the _BEOS_ definition in favor of its own
	  platform identification _HAIKU_. Patch from Francois Revol.

2011-04-20  Jean Delvare  <jdelvare@suse.de>
